--- a/blog/app/views/articles/_form.html.erb
+++ b/blog/app/views/articles/_form.html.erb
@@ -23,6 +23,11 @@
     <%= f.label :text %><br>
     <%= f.text_area :text %>
   </p>
+
+  <p>
+    <%= f.label :email %><br>
+    <%= f.text_area :email %>
+  </p>
  
   <p>
     <%= f.submit %>
